examples/pass/Rxl-RylRxl.stl
/** RRintro **/
global x,y; 
local l; 

/** Optimised **/ 
read(y,l); 
read(x,l); 

/** Unoptimised **/ 
read(x,l); 
