examples/fail/WWintro.stl
/** RRswap **/
global x; 
local l; 

/** Optimised **/ 
write(x,l); 
write(x,l); 

/** Unoptimised **/ 
write(x,l); 
